2005-01-02  Tom Tromey  <tromey@redhat.com>

	* java/lang/System.java (getenv): Added @since.

	* java/lang/System.java (getenv(String)): Rewrote.
	(getenv): New method.
	* vm/reference/java/lang/VMSystem.java (getenv): New methods.

2004-12-18  Tom Tromey  <tromey@redhat.com>

	* java/lang/String.java (String(StringBuilder)): Rewrote.
	* java/lang/StringBuilder.java (shared): Removed.
	(ensureCapacity): Updated.
	(substrinng): Likewise.
	(toString): Likewise.

2004-11-06  Tom Tromey  <tromey@redhat.com>

	* java/lang/Void.java (TYPE): Added cast to initializer.
	* java/lang/Short.java (TYPE): Added cast to initializer.
	* java/lang/Long.java (TYPE): Added cast to initializer.
	* java/lang/Integer.java (TYPE): Added cast to initializer.
	* java/lang/Float.java (TYPE): Added cast to initializer.
	* java/lang/Double.java (TYPE): Added cast to initializer.
	* java/lang/Character.java (TYPE): Added cast to initializer.
	* java/lang/Byte.java (TYPE): Added cast to initializer.
	* java/lang/Boolean.java (TYPE): Added cast to initializer.
	* java/util/Hashtable.java (elements): Fixed return type.

2004-11-03  Tom Tromey  <tromey@redhat.com>

	* java/util/Collection.java (iterator): Fixed return type.

	* java/util/AbstractSet.java (removeAll): Fixed iterator
	declaration.
	* java/util/AbstractList.java (RandomAccessSubList): RandomAccess
	is not generic.

2004-11-01  Tom Tromey  <tromey@redhat.com>

	* java/util/AbstractMap.java: Removed old FIXME comment.

	* java/lang/Long.java (rotateRight): Fixed return type.
	* java/lang/Integer.java (reverse): Use correct name for
	variable.
	* java/lang/Character.java (valueOf): Use MIN_VALUE, not
	MIN_CACHE.
	* java/lang/Byte.java (valueOf): Use MIN_VALUE, not MIN_CACHE.

	* gnu/java/util/DoubleEnumeration.java: Genericized.

	* java/lang/Appendable.java (append): Throws IOException.

	* java/util/Hashtable.java: Genericized.

	* java/util/HashMap.java (putAll): Use correct type for iterator.
	(putAllInternal): Likewise.